--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2010-07-20  Xie Yanbo  <xieyanbo@gmail.com>
+
+    * fix build tools string encoding
+    * release version 0.2
+
+2010-07-19  Xie Yanbo  <xieyanbo@gmail.com>
+
+    * change dependent packages; add more pkg info
+    * release version 0.1.1
+
 2010-07-19  Xie Yanbo  <xieyanbo@gmail.com>
 
     * initial release, version 0.1
