--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-08-19  Xie Yanbo  <xieyanbo@gmail.com>
+
+    * release version 0.2.1
+
+2010-08-01  Xie Yanbo  <xieyanbo@gmail.com>
+
+    * fix document
+
 2010-07-20  Xie Yanbo  <xieyanbo@gmail.com>
 
     * fix build tools string encoding
