--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2010-08-19  Xie Yanbo  <xieyanbo@gmail.com>
 
+    * release version 0.2.2
+    * fix typo
     * release version 0.2.1
 
 2010-08-01  Xie Yanbo  <xieyanbo@gmail.com>
