--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-27  Xie Yanbo  <xieyanbo@gmail.com>
+
+    * release version 0.2.3
+    * upstream updated
+
 2010-08-19  Xie Yanbo  <xieyanbo@gmail.com>
 
     * release version 0.2.2
